fixed issue with why us bullet points shifting RHS of page down

--- a/frontend-react-app/src/components/pages/splash/why_us/scss/WhyUs.module.scss
+++ b/frontend-react-app/src/components/pages/splash/why_us/scss/WhyUs.module.scss
@@ -27,8 +27,9 @@
     }
     .rhsContainer {
       flex-direction: column;
+      height: fit-content;
       align-items: center;
-      row-gap: 2vh;
+      row-gap: 10vh;
       .img {
         max-width: 300px;
       }
